# Lorenzo

./: README.md  config.example.toml  pyproject.toml
lorenzo/: __init__.py  cli.py  config.py  eval.py  input_processor.py  interfaces.py  models.py  orchestrator.py
lorenzo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lorenzo/language/: __init__.py  adapter.py  backends.py
lorenzo/memory/: __init__.py  embedding.py  retriever.py  store.py
lorenzo/reasoning/: __init__.py  claim_extractor.py  iterative.py  planner.py  refinement_judge.py  refinement_objectives.py  refinement_rewriter.py  requery_builder.py
sample_data/: eval_scenarios.json  eval_scenarios_broad.json  eval_scenarios_goal_refinement.json  memory_store.jsonl
tests/: test_claim_aware_refinement.py  test_claim_extractor_edges.py  test_conflict_policy_by_type.py  test_conflict_resolution.py  test_eval_goal_refinement_metrics.py  test_goal_refinement.py  test_input_processor_boundaries_extensive.py  test_input_processor_intent.py  test_iterative_reasoning.py  test_memory_policy.py  test_memory_retrieval.py  test_merge_policy.py  test_orchestrator_flow.py  test_refinement_judge_edges.py  test_refinement_rewriter.py  test_retrieval_quality.py  test_storage_policy_diverse.py
